@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-06T16:23:28Z",
-  "count" : 21,
-  "count_minmax" : [ 8, 21 ],
-  "count_decinc" : [ -0, +21 ],
-  "uniques" : 9,
-  "uniques_minmax" : [ 4, 9 ],
-  "uniques_decinc" : [ -0, +9 ]
+  "timestamp" : "2022-07-07T01:38:24Z",
+  "count" : 23,
+  "count_minmax" : [ 8, 23 ],
+  "count_decinc" : [ -0, +23 ],
+  "uniques" : 11,
+  "uniques_minmax" : [ 4, 11 ],
+  "uniques_decinc" : [ -0, +11 ]
 }
