@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-06T16:23:28Z",
+  "timestamp" : "2022-07-07T01:38:24Z",
   "count_outdated" : 428,
   "uniques_outdated" : 151,
-  "count" : 605,
-  "uniques" : 206,
+  "count" : 607,
+  "uniques" : 208,
   "views" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 21,
-      "count_minmax": [ 8, 21 ],
-      "uniques": 9,
-      "uniques_minmax": [ 4, 9 ]
+      "count": 23,
+      "count_minmax": [ 8, 23 ],
+      "uniques": 11,
+      "uniques_minmax": [ 4, 11 ]
     }
   ]
 }
