@@ -1,3 +1,10 @@
+2022-07-07T01:38:24Z:
+* notice: last 14d: unq all: 54 179
+* notice: prev accum: outdated-unq outdated-all / unq all: 151 428 / 206 605
+* notice: next accum: outdated-unq outdated-all / unq all: 151 428 / 208 607
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +11 +23 -0 -0 / 11 23
+* notice: removed / changed dates: [] / [2022-07-06]
+
 2022-07-06T16:23:28Z:
 * notice: last 14d: unq all: 52 177
 * notice: prev accum: outdated-unq outdated-all / unq all: 151 428 / 201 592
